--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             100% { background-position: 100% 50%; }
         }
         .container { 
-            max-width: 800px; 
+            max-width: 90%; 
             margin: auto; 
             padding: 20px; 
             background: rgba(0, 0, 0, 0.7);
@@ -36,14 +36,15 @@
             text-shadow: 2px 2px 4px rgba(0,0,0,0.7); 
         }
         .hobby { 
-            margin: 20px 0; 
+            margin: 20px auto; 
             padding: 20px; 
             border-radius: 10px; 
             background: linear-gradient(135deg, #00ffcc, #ff00ff);
             box-shadow: 0 2px 10px rgba(255,255,255,0.3);
             transition: transform 0.3s ease, background 1s ease-in-out;
             color: white;
-            position: relative;
+            width: 100%;
+            max-width: 600px;
         }
         .hobby:hover {
             transform: scale(1.1);
@@ -51,8 +52,8 @@
         }
         .ufo {
             position: absolute;
-            width: 60px;
-            height: 30px;
+            width: 8vw;
+            height: 4vw;
             background: radial-gradient(circle, #fff 20%, transparent 60%);
             border-radius: 50%;
             box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.8);
@@ -64,11 +65,11 @@
             100% { transform: translateY(-10px); }
         }
         @keyframes moveUFO {
-            0% { left: -100px; top: 10%; }
-            25% { left: 25%; top: 20%; }
-            50% { left: 50%; top: 40%; }
-            75% { left: 75%; top: 20%; }
-            100% { left: 110%; top: 50%; }
+            0% { left: -10vw; top: 10%; }
+            25% { left: 25vw; top: 20%; }
+            50% { left: 50vw; top: 40%; }
+            75% { left: 75vw; top: 20%; }
+            100% { left: 110vw; top: 50%; }
         }
         .ufo1 { animation-delay: 0s; }
         .ufo2 { animation-delay: 2s; }
@@ -82,6 +83,11 @@
             background: rgba(255, 255, 255, 0.2);
             border-radius: 10px;
             display: inline-block;
+        }
+        @media (max-width: 600px) {
+            .ufo { width: 15vw; height: 7vw; }
+            .hobby { width: 90%; }
+            #score { font-size: 18px; }
         }
     </style>
     <script>
